Mission Section & footer updated

--- a/index.html
+++ b/index.html
@@ -32,18 +32,21 @@
                 <h3>Mission</h3>
                 <p>
                     Mission is the prime object to full fill a perpose.It's works from present for the future.Doers
-                    extremely believe in mission
+                    extremely believe in mission.We try,we fail,fall down and then again we get up ,try harder till we
+                    achieve our goals.Every single steps help to get the touch of goals.
                 </p>
             </div>
             <div id="vision">
                 <h3>Vision</h3>
-                Mission is the prime object to full fill a perpose.It's works from present for the future.Doers
-                extremely believe in mission
+                <p>Vision is the Aim for the Mission.It stimulates our passion to achieve our Goals,it helps and works
+                    subconsciously, gives us spiritual influence to jump for the mission.It's our Plan,our Mission's
+                    module and thoughts for implementation</p>
             </div>
             <div id="goal">
                 <h3>Goals</h3>
-                Mission is the prime object to full fill a perpose.It's works from present for the future.Doers
-                extremely believe in mission
+                <p>Goal is the FInish Line!We works with Perseverance and keep consistency and finally we get a result
+                    in time.Result depends on luck but if we are dedicated enough and put our best effort then it's
+                    oviously go with our side by the grace of Allah</p>
             </div>
         </div>
 
@@ -82,7 +85,7 @@
     </section>
 </body>
 <footer>
-    <h3>Mission 2022</h3>
+    <h3>Mission <span style="color:cyan;">2022</span></h3>
     <p>Hard Work, Perseverance and Determination for 2022</p>
 </footer>
 
