Mentor_page_added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission-2022</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./images/favIcon.JPG" type="image/x-icon">
 </head>
 
 <body>
@@ -84,9 +85,44 @@
         </div>
     </section>
 </body>
+<section>
+    <div class="Display Shapes">
+        <div class="half-width">
+            <img src="./images/5243835.jpg" alt="Art">
+
+        </div>
+        <div class="half-width">
+            <h2>Wanna tell us <br> <span>your story?</span></h2>
+            <p class="box_shadow">
+                How was your Journey towards Success, what kind of obstacles you have faced?What advise <br> or what
+                counselling do
+                want
+                to
+                provide for others?You can support as a virtual mentor for the others
+            </p>
+            <h4> please fill up the registration form for mentoring others
+            </h4>
+            <form action="">
+                Your Name <input type="text"> <br>
+                Email<input type="email"> <br>
+                Password <input type="password"><br>
+                Gender <br> <input type="checkbox">Male<input type="checkbox"> Female <br>
+                <button>Sign Up</button>
+            </form>
+        </div>
+        <div class="half-width">
+            <h2>Seeking for <br> <span>Mentor</span>?</h2>
+            <p class="box_shadow">
+                We are giving Voluntary Mentorship for those who facing trouble with Career Guideline,Student
+                Life,Family Problem,Personal Life. <br> Are you demotivated from your Goal?
+            </p>
+
+        </div>
+    </div>
+</section>
 <footer>
-    <h3>Mission <span style="color:cyan;">2022</span></h3>
-    <p>Hard Work, Perseverance and Determination for 2022</p>
+    <h3>Mission <span>2022</span></h3>
+    <p>Hard work, Perseverance and Determination for 2022</p>
 </footer>
 
 </html>
