form_section_added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Mission-2022</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./images/favIcon.JPG" type="image/x-icon">
+
 </head>
 
 <body>
@@ -85,39 +86,66 @@
         </div>
     </section>
 </body>
-<section>
+<section class="Mentor">
     <div class="Display Shapes">
         <div class="half-width">
-            <img src="./images/5243835.jpg" alt="Art">
+            <img style="border-radius: 50px; padding-bottom: 50%;" src="./images/5243835.jpg" alt="Art">
+            <img src="./images/3081629.jpg" alt="group_icon">
+
 
         </div>
         <div class="half-width">
             <h2>Wanna tell us <br> <span>your story?</span></h2>
-            <p class="box_shadow">
+            <p id="box_shadow_your_story">
                 How was your Journey towards Success, what kind of obstacles you have faced?What advise <br> or what
-                counselling do
+                counselling do you
                 want
                 to
-                provide for others?You can support as a virtual mentor for the others
+                provide for others?You can support as a virtual mentor for the others.It increases ability to help
+                other, your help will influence others to do the same. Voluntary works don't pay anything but gives one
+                to everyone. That is mental peace.By helping others during there hard time, is really important for them
             </p>
-            <h4> please fill up the registration form for mentoring others
-            </h4>
-            <form action="">
-                Your Name <input type="text"> <br>
-                Email<input type="email"> <br>
-                Password <input type="password"><br>
-                Gender <br> <input type="checkbox">Male<input type="checkbox"> Female <br>
-                <button>Sign Up</button>
-            </form>
-        </div>
-        <div class="half-width">
-            <h2>Seeking for <br> <span>Mentor</span>?</h2>
-            <p class="box_shadow">
-                We are giving Voluntary Mentorship for those who facing trouble with Career Guideline,Student
-                Life,Family Problem,Personal Life. <br> Are you demotivated from your Goal?
+            <p id="box_shadow_support">
+                Your support and Attention will help to create a great community among the common people.It will work
+                for Socio-culture development
             </p>
 
         </div>
+        <div class="half-width">
+            <h2>Seeking for <br> <span>Mentor</span>?</h2>
+            <p id="box_shadow_seeking_Mentor">
+                We are giving Voluntary Mentorship for those who facing trouble with Career Guideline,Student
+                Life,Family Problem,Personal Life. <br> Are you demotivated from your Goal? Have you lost yourself? We
+                will try to listen your words in a group or personal counselling,don't worry ,we won't judge.
+            </p>
+            <p id="box_shadow_attention">Attention:We are not Clinical Psychologist.We are like you.some of them
+                experienced by
+                facing the situation what you actually facing now, some of us love to listen people words.We just listen
+                and if anyone is experienced then he talks about his experience and ways he followed to handle the
+                situation</p>
+
+
+        </div>
+
+
+
+
+
+        <form action="">
+            <h4> please fill up the registration form for mentoring others
+            </h4>
+
+            Your Name <input type="text"> <br>
+            Email<input type="email"> <br>
+            Password <input type="password"><br>
+            Gender <br> <input type="checkbox">Male<input type="checkbox"> Female <br>
+            <button>Sign Up</button>
+            <h6>Already have an account? </h6> <br>
+            Name <input type="text"> <br>
+            Email <input type="email"> <br>
+            Password <input type="password"> <br>
+            <button>Sign In</button>
+        </form>
     </div>
 </section>
 <footer>
