--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Mission-2022</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./images/favIcon.JPG" type="image/x-icon">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -86,8 +88,9 @@
         </div>
     </section>
 </body>
+
 <section class="Mentor">
-    <div class="Display Shapes">
+    <div class="Display" id="Shapes_img">
         <div class="half-width">
             <img style="border-radius: 50px; padding-bottom: 50%;" src="./images/5243835.jpg" alt="Art">
             <img src="./images/3081629.jpg" alt="group_icon">
@@ -112,13 +115,14 @@
 
         </div>
         <div class="half-width">
-            <h2>Seeking for <br> <span>Mentor</span>?</h2>
+            <h2 id="h2_side_border_Mentor">Seeking for <br> <span>Mentor</span>?</h2>
             <p id="box_shadow_seeking_Mentor">
                 We are giving Voluntary Mentorship for those who facing trouble with Career Guideline,Student
                 Life,Family Problem,Personal Life. <br> Are you demotivated from your Goal? Have you lost yourself? We
                 will try to listen your words in a group or personal counselling,don't worry ,we won't judge.
             </p>
-            <p id="box_shadow_attention">Attention:We are not Clinical Psychologist.We are like you.some of them
+            <p id="box_shadow_attention"><Strong>Attention! </Strong>We are not Clinical Psychologist.We are like
+                you.some of them
                 experienced by
                 facing the situation what you actually facing now, some of us love to listen people words.We just listen
                 and if anyone is experienced then he talks about his experience and ways he followed to handle the
@@ -132,12 +136,15 @@
 
 
         <form action="">
-            <h4> please fill up the registration form for mentoring others
+            <h4> Please fill up the Registration form to involve with us
             </h4>
 
             Your Name <input type="text"> <br>
             Email<input type="email"> <br>
+            Mobile No<input type="number"> <br>
             Password <input type="password"><br>
+            Location<input type="text"> <br>
+            Date of Birth<input type="date"> <br>
             Gender <br> <input type="checkbox">Male<input type="checkbox"> Female <br>
             <button>Sign Up</button>
             <h6>Already have an account? </h6> <br>
