--- a/index.html
+++ b/index.html
@@ -145,10 +145,14 @@
             Password <input type="password"><br>
             Location<input type="text"> <br>
             Date of Birth<input type="date"> <br>
-            Gender <br> <input type="checkbox">Male<input type="checkbox"> Female <br>
+            What's your Concern?<br> <input type="radio"> Need Mentor <br>
+            <input type="radio">Storytelling <br>
+            <input type="radio">Mentoring<br> <br>
+            Gender <br> <input type="checkbox">Male<input type="checkbox">
+            Female <br>
             <button>Sign Up</button>
-            <h6>Already have an account? </h6> <br>
-            Name <input type="text"> <br>
+            <h5>Already have an account? </h5> <br>
+
             Email <input type="email"> <br>
             Password <input type="password"> <br>
             <button>Sign In</button>
