--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="half-width">
             <img style="border-radius: 50px; padding-bottom: 50%;" src="./images/5243835.jpg" alt="Art">
             <img src="./images/3081629.jpg" alt="group_icon">
-
+            <a id="about_us_link" target="Blank" href="#">Know More About Us</a>
 
         </div>
         <div class="half-width">
@@ -158,6 +158,7 @@
             <button>Sign In</button>
         </form>
     </div>
+
 </section>
 <footer>
     <h3>Mission <span>2022</span></h3>
