Unneccessary_files_deleted

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 experienced by
                 facing the situation what you actually facing now, some of us love to listen people words.We just listen
                 and if anyone is experienced then he talks about his experience and ways he followed to handle the
-                situation</p>
+                situation.</p>
 
 
         </div>
