My_mission_2022_updated

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1 class="h1-side-border">Stay Focused on <br><span>Mission-2022</span></h1>
             <p>Too many dreams,too many whims makes a man mad, healthy and fat.Apart from that I am Trying to focus in
                 one mission.The absolute vission will be the development of myself and working for the goals,I found
-                mines,Do you?</p><br>
+                mine,Do you?</p><br>
             <a target="blank"
                 href="https://www.linkedin.com/pulse/5-ways-stay-focused-your-2022-goals-scott-garvis-c-m-a-a?trk=articles_directory">Explore
                 Yours</a><br>
@@ -35,22 +35,25 @@
             <div id="mission">
                 <h3>Mission</h3>
                 <p>
-                    Mission is the prime object to full fill a perpose.It's works from present for the future.Doers
-                    extremely believe in mission.We try,we fail,fall down and then again we get up ,try harder till we
-                    achieve our goals.Every single steps help to get the touch of goals.
+                    Mission is the prime object to full fill a perpose.It's works from present for the future.We try,we
+                    fail,fall down and then again we get up ,try harder till we
+                    achieve our goals. <br>
+                    My Mission in this year is to develop myself through tecchnical skills and soft skills also
                 </p>
             </div>
             <div id="vision">
                 <h3>Vision</h3>
-                <p>Vision is the Aim for the Mission.It stimulates our passion to achieve our Goals,it helps and works
+                <p>Vision is the Aim for the Mission.It stimulates our passion to work for our Goals,it helps and works
                     subconsciously, gives us spiritual influence to jump for the mission.It's our Plan,our Mission's
-                    module and thoughts for implementation</p>
+                    module and thoughts for implementation <br>
+                    my vision is to build a better version of myself this year</p>
             </div>
             <div id="goal">
                 <h3>Goals</h3>
-                <p>Goal is the FInish Line!We works with Perseverance and keep consistency and finally we get a result
+                <p>Goal is the Finish Line!We works with Perseverance and keep consistency and finally we get a result
                     in time.Result depends on luck but if we are dedicated enough and put our best effort then it's
-                    oviously go with our side by the grace of Allah</p>
+                    oviously go with our side by the grace of Allah. <br>
+                    My Goal is to meet better a person in front of my mirror</p>
             </div>
         </div>
 
