Mentor_section_rechecked

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 to
                 provide for others?You can support as a virtual mentor for the others.It increases ability to help
                 other, your help will influence others to do the same. Voluntary works don't pay anything but gives one
-                to everyone. That is mental peace.By helping others during there hard time, is really important for them
+                to everyone. That is mental peace.By helping others during their hard time, is really important for them
             </p>
             <p id="box_shadow_support">
                 Your support and Attention will help to create a great community among the common people.It will work
